Fix paging
The complex selector :not(:has(> li:nth-of-type(4))) is too much for safari

--- a/src/app/pagination/pagination.component.sass
+++ b/src/app/pagination/pagination.component.sass
@@ -34,6 +34,3 @@
       color: colors.$color-tertiary-light
       background-color: colors.$color-primary-light
       border-color: colors.$color-tertiary-light
-
-    &:not(:has(> li:nth-of-type(4)))
-      display: none
